# whisper-heb-ipa

./: .gitignore  AGENTS.md  README.md  TRAINING.md  pyproject.toml
.github/: Dockerfile.hf_space
.github/workflows/: hf_space.yml
examples/: app.py
scripts/: benchmark.py  export_ct2.sh  phonemize.py  prepare_crowd_recital.py  prepare_ilspeech.py  prepare_saspeech.py  train_bench.sh  train_findtune.sh  train_pipeline.sh  upload_model.sh
scripts/pipeline/: combine_saspeech.py  copy_ilspeech_eval.py  download_crowd_recital.py
src/: config.py  constants.py  data.py  eval.py  infer.py  prepare.py  prepare_ljspeech.py  train.py
