[project]
name = "whisper-heb-ipa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets[audio]>=4.1.0",
    "evaluate>=0.4.5",
    "huggingface-hub>=0.35.0",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "openai-whisper>=20250625",
    "pandas>=2.3.2",
    "pydub>=0.25.1",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "transformers>=4.52.0",
    "wandb>=0.21.4",
]

# CUDA Config

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
